--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "star-log",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,5 +16,14 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "mongoose": "^5.3.14"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/carissamorrow/star-log.git"
+  },
+  "bugs": {
+    "url": "https://github.com/carissamorrow/star-log/issues"
+  },
+  "homepage": "https://github.com/carissamorrow/star-log#readme",
+  "description": ""
 }
